Implement JDTLS process integration: start/stop JDTLS, LSP4J connection, workspace init (#2)
* Initial plan

* Implement JDTLS process integration: start/stop process, LSP4J connection, tests, README

Co-authored-by: sunix <650571+sunix@users.noreply.github.com>

* Refactor to in-process Java analysis using JavaParser (hybrid approach 3)

Replace the external JDTLS process integration with in-process Java analysis
using JavaParser. No subprocess management needed — the analysis service runs
inside the same JVM as the MCP server.

- Replace lsp4j dependency with javaparser-core 3.26.4
- Rewrite JdtlsConnectionService: remove ProcessBuilder/LSP, add JavaParser
- New MCP tools: getDiagnostics(file), getSymbols(file)
- Remove startJdtls/stopJdtls tools (no process to manage)
- 18 tests passing (diagnostics, symbols, workspace validation)
- Fix maven.compiler.release to 17 (matching available JDK)

Co-authored-by: sunix <650571+sunix@users.noreply.github.com>

* Address code review: configure JavaParser language level, use PathMatcher for file matching

Co-authored-by: sunix <650571+sunix@users.noreply.github.com>

* Switch from JavaParser to Eclipse JDT Core APIs for in-process Java analysis

Replace com.github.javaparser with org.eclipse.jdt.core (same APIs that power
Eclipse IDE and JDTLS). Uses ASTParser, CompilationUnit, ASTVisitor, IProblem
for compiler-level diagnostics and symbol extraction — all running in-process.

20 tests passing.

Co-authored-by: sunix <650571+sunix@users.noreply.github.com>

* Address code review: extract JLS_LEVEL constant, document parseSource visibility

Co-authored-by: sunix <650571+sunix@users.noreply.github.com>

* Revert to JDTLS separate-process approach (original plan)

Per @sunix's decision: revert the in-process JDT Core / JavaParser
changes and go back to the JDTLS-as-external-process approach from
b619096. Also carries forward the maven.compiler.release 25→17 fix
so the project builds on JDK 17/21.

Co-authored-by: sunix <65057